# yt-pl-dl

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  PROJECT.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
deploy/proxmox/: README.md
deploy/systemd/: bgutil-pot-provider.service  yt-pl-dl-dashboard.service  yt-pl-dl.service  yt-pl-dl.timer
src/yt_pl_dl/: __init__.py  config.py  dashboard.py  downloader.py  logging_setup.py  main.py  models.py  playlist.py  state.py  sync.py
src/yt_pl_dl/templates/: dashboard.html
