[project]
name = "yt-pl-dl"
version = "0.1.0"
description = "Monitor a YouTube playlist, download new videos, and sync them to Synology."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "yt-dlp>=2026.1.1",
]

[project.scripts]
yt-pl-dl = "yt_pl_dl.main:main"
yt-pl-dl-dashboard = "yt_pl_dl.dashboard:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
